# MyRapidTransitTracker

./: .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile.consumer  Dockerfile.ingestion  Dockerfile.writer  LICENSE  README.md  alembic.ini  cloudformation_template.yml  database_schema.md  deployment_README.md  docker-compose.db.yml  docker-compose.dbtest.yml  docker-compose.dep.yml  docker-compose.yml  gtfs_sample_20251007_092039.json  gtfs_sample_20251028_055211.json  output.md  pyproject.toml  test_api.py  users.json
MyRapidTransitTracker/: Dockerfile.viz  README.md
MyRapidTransitTracker/config/: settings.py
MyRapidTransitTracker/data_ingestion/: prototype.py  raw_consumer.py  raw_data_ingestion.py
MyRapidTransitTracker/database/: database.py  models.py
MyRapidTransitTracker/scripts/: test_import.py
MyRapidTransitTracker/stream_processing/: database_writer.py
MyRapidTransitTracker/visualization/: app.py
alembic/: env.py
alembic/versions/: 130cbf310b86_add_timezone_to_timestamps.py  2b95f2c5a2cf_remove_unused_columns.py
docker/: Dockerfile.base  Dockerfile.consumer  Dockerfile.ingestion  Dockerfile.viz  Dockerfile.writer
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/components/: MapView.tsx  Sidebar.tsx
frontend/components/layers/: HeatmapLayer.tsx  HistoricalTraceLayer.tsx  LiveVehicleLayer.tsx
frontend/lib/: constants.ts  formatDate.ts
frontend/pages/: index.tsx
frontend/src/: App.css  App.tsx
frontend/src/components/: ControlPanel.tsx  VehicleMap.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: time.test.ts  time.ts
frontend/styles/: globals.css
frontend/types/: api.ts
project_alpha/: Dockerfile.viz
project_alpha/config/: settings.py
project_alpha/data_ingestion/: data_verifier.py  prototype.py  raw_consumer.py  raw_data_ingestion.py
project_alpha/database/: database.py  models.py
project_alpha/scripts/: test_import.py  test_visualization.py
project_alpha/stream_processing/: database_writer.py
project_alpha/visualization/: app.py
src/app/: page.tsx
tests/: api_call_test.py  test_foo.py  test_server.py
